Fixed overlapping on modal weekday change; fixed style for shift availability

--- a/src/pages/shift-availability/shift-availability.scss
+++ b/src/pages/shift-availability/shift-availability.scss
@@ -53,5 +53,10 @@ button.like {
         }
       }
     }
+    ion-item:first-child {
+      .item-inner {
+        padding-left: 10px;
+      }
+    }
   }
 }
